--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tflo-tflo/HCDE-539#readme",
   "dependencies": {
-    "imagemagick": "^0.1.3"
+    "imagemagick": "^0.1.3",
+    "marked": "^14.1.2"
   }
 }
