--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "html-minifier-terser": "^7.2.0",
     "imagemagick": "^0.1.3",
-    "marked": "^14.1.2"
+    "marked": "^14.1.2",
+    "sharp": "^0.33.5"
   }
 }
